--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,7 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "shopware/core": "<6.7"
+    }
 }
