--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "shopware/core": "<6.7"
+        "shopware/core": ">=6.6.1"
     }
 }
